--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3'
 services:
 
   fpm:
-    build: PHP7fpm
+    image: hudsonventura/phpondocker_with_pdo_oci
+    build: PHPfpm
     volumes:
       - ./www:/var/www/html
-      - ./server-configs:/usr/local/etc/php
+      - ./configs:/usr/local/etc/php
     #environment:
     #  - ORACLE_HOME=/usr/local/instantclient
 
@@ -14,10 +15,10 @@ services:
     build: Nginx
     volumes:
       - ./www:/var/www/html
-      - ./server-configs/nginx.conf:/etc/nginx/nginx.conf
-      - ./server-configs/app.vhost:/etc/nginx/conf.d/app.vhost
+      - ./configs/nginx.conf:/etc/nginx/nginx.conf
+      - ./configs/app.vhost:/etc/nginx/conf.d/app.vhost
       - ./logs/Nginx:/var/log/nginx
-      - ./server-configs/cert/:/etc/nginx/cert
+      - ./configs/cert/:/etc/nginx/cert
     ports:
       - "80:80"
-      - "443:443"
+    #  - "443:443" -- to able the 443 and SSL, see README.md
